<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="360dp"
    android:layout_height="wrap_content"
    android:background="@null">

    <ImageView
        android:id="@+id/bgHistory"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:src="@drawable/bg_pause_dialog"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history_dialog_title"
        android:textColor="#FFD700"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/bgHistory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"/>

    <LinearLayout
        android:id="@+id/layoutHighScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="#80000000"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_high_score_header"
            android:textColor="#FFD700"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvHighScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvLabelLast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history_last_stats_divider"
        android:textColor="#AAAAAA"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/layoutHighScore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"/>

    <TextView
        android:id="@+id/tvLastStats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history_stats_placeholder"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tvLabelLast"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <ImageButton
        android:id="@+id/btnCloseHistory"
        android:layout_width="260dp"
        android:layout_height="100dp"
        android:src="@drawable/btn_exit_green"
        android:background="@null"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@id/bgHistory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="30dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>